apps/block_scout_web/assets/css/_layout.scss
@import '~@tarekraafat/autocomplete.js/dist/css/autoComplete.01.css';

.media {
  display: flex;
  align-items: flex-start;
}

.media-body {
  flex: 1;
}
.advertisement_placement {
  height: 100px;
  display: table;
  margin: 0 auto;
}
.lable_mw{
  min-width: 89px;

}
.currency_tile .small {
  font-size: 10px;;
}

.currency_tile .one {   
  background-color: #7ed6dd;
  color:#fff  
}

.currency_tile .two {
  background-color: #51CAE7;
  color:#fff  
}


.currency_tile .three {
  background-color: #318AC8;
  color:#fff ;
}


.currency_tile .four {
  background-color: #2D5B99;
  color:#fff  
  
}
.overflow-auto {
  overflow: auto;
}
.font-32 {
  font-size: 32px;
}

.font-24 {
  font-size: 24px;
}

.width160 {
  width: 160px;
}

.width190 {
  width: 190px;
}

.width120 {
  width: 120px;
}


.border-right-sm1{
  border-right: 1px solid #dee2e6;
}

.border-right-sm2{
  border-right: 1px solid #dee2e6;
}



.layout-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  // background: url(https://tronscan.io/static/media/body_bg.0b5e1c3d.png);
  // background-size: cover;
  // background-repeat: no-repeat;
  background-color: #f5f5f5;

  main {
    flex-grow: 1;
    // background-color: #fbfafc;
  }
}

.logs-hash {
  line-height: 24px !important;
}

.min_height_376 {
  min-height: 376px;

}

.btn-copy-icon svg {
  width: 25px!important;
  height: 25px!important;
}

.chart_box {
  background: #ffffff;
    padding: 7px;
    border: 1px solid #84efc7;
    border-radius: 3px;
    margin: 0 5px;
}

.table-head {
  background-color:#f6f8fb;
}
.dark-theme-applied .table-head {
  background-color:#353434;
}
.dark-theme-applied .border {
    border: 1px solid #3e3e3e !important;
}
.dark-theme-applied .shadow {
  box-shadow: 2px 1px 5px #242426 !important;

}
.dark-theme-applied .table thead th {  
  border-bottom: 1px solid #3e3e3e!important;
}

.dark-theme-applied .card-header {
  background: #323232;
  border-bottom: 1px solid #484848!important;
}
.dark-theme-applied ul.side_nav li a {
  color: #fff!important;
}
.dark-theme-applied .table {  
  color: #fff;
}
.dark-theme-applied .layout-container {
  background-color: #242424;
  color: #fff;
}
.dark-theme-applied .text-muted {
  color: #5b77b9;
}
.dark-theme-applied .card-tabs {
  background-color: #242424;
}
.dark-theme-applied .card-tab.active {
  background-color: #33A042;
  color: #fff;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}
.dark-theme-applied .border-right-sm1,
.dark-theme-applied .border-right-sm2 {
  border-right: 1px solid #717678;
}
.dark-theme-applied .chart_box {
  background: #313355;
  border: 1px solid #84efc7;
}
.dark-theme-applied .dashboard-banner-network-stats-value {
  color: #fff;
}
.dark-theme-applied .limit {
  color: #888888;
}
.dark-theme-applied .white-bg {
  background-color: #2a2a2a;
}
.white-bg {
  background-color: #fff;
}
.dark-theme-applied .tile-transactions {
  color: #fff;
}
.dark-theme-applied .tile-bottom-contents {
  background-color:#2A2A2A;
}
dl:last-child {
  margin-bottom: 0;
  border-bottom: none;
}

.dark-theme-applied .text-teal {
  color:#42c670!important;
}
.dark-theme-applied .border-top {
  border-top: 1px solid #3e3e3e!important;
}
.dark-theme-applied .bg-light {
  background-color: #2a2a2a !important;
}
.dark-theme-applied dl {
  border-bottom: 1px solid #3e3e3e;
}
.footer-bottom {
  background-color: #34A255;
}
.footer-bottom .footer-social-icons {
  position: relative;
  top: 20%;
  float:right;
  line-height: 36px;
}

.dark-theme-applied .footer-bottom {
  background-color: #323131;
  border-top: 1px solid #3c3a3a;
}
.dark-theme-applied .text-secondary {
  color: #fff;
}
.dark-theme-applied .card-chain-blocks .bg-white {
  background-color: #242424 !important;

}
.dark-theme-applied .bg-white {
  background-color: #2a2a2a!important
}

.deep-shadow {
  box-shadow: -10px -10px 0px 0px #eee;

}
.dark-theme-applied .sub-text {
  color:#fff
}
.dark-theme-applied .shadow{
  box-shadow: 2px 1px 5px #2a2a2a!important
}
.dark-theme-applied .deep-shadow{
  box-shadow: -10px -10px 0px 0px #242424!important; 
}
.truncate_hash {
  width: 70px;
  display: inline-block!important;
}
.width100 {
  width: 100px;
}
.width150 {
width: 150px;

}
.width110 {
  width: 110px;
}
.dark-theme-applied .table-hover tbody tr:hover {
  color: #fff;
}
.dark-theme-applied .media_icon {
  -webkit-filter: brightness(0) invert(1);
  filter: brightness(0) invert(1);
}

.fixed-layout {
  table-layout:fixed
}
.min_page_height {
  min-height: 65vh;
}


@media only screen and (max-width: 600px) {
.deep-shadow{
 box-shadow: none;
} 

}
@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
  .deep-shadow {
    box-shadow: none;
  }

  //  .fixed-layout {
  //   table-layout: unset
  // }

  //  .width100 {
  //    width: 50px;
  //  }

   .width150 {
     width: 100px;

   }
   .border-bottm-sm{
    border-bottom: 1px solid #dee2e6;
  }

  .border-right-sm1
  .border-right-sm2 {
    border-right: 0!important;
  }

  .pb-sm {   
    padding-bottom: 15px;
  }

  .mb-sm {
    margin-bottom: 15px;
  }

  .mt-sm {
    margin-top: 15px;
  }
  .mt-sm-45 {
    margin-top: 45px;
  }

  table td.screenRow, table th.screenRow {
    width: 150px;
  }

  table td.wideRow, table th.wideRow {
    width: 235px;
  }

  .wideRow .width100 {
      width: 170px;
  }    
   
}

@media screen and (min-device-width: 290px) and (max-device-width: 768px) {
//   .fixed-layout {
//     table-layout: unset!important
// }

.border-bottm-sm {
  border-bottom: 1px solid #dee2e6;
}

.pb-sm {   
  padding-bottom: 15px;
}

.mb-sm {
  margin-bottom: 15px;
}

.mt-sm {
  margin-top: 15px;
}
.mt-sm-45 {
  margin-top: 45px;
}

.border-right-sm1,
.border-right-sm2 {
  border-right:0!important;
}

table td.screenRow, table th.screenRow {
  width: 150px;
}

table td.wideRow, table th.wideRow {
  width: 235px;
}
.wideRow .width100 {
  width: 170px;
}

.last_in_mobile {
  order: 2;
}

.first_in_mobile {
  order: 1;
}

.stickysidebar {
  height: fit-content;
  position: unset;

}

.text-truncate-mobile {
  width: 65%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}
}


@media (min-width: 576px) and (max-width: 767px){
  .border-right-sm1,
  .border-right-sm2 {
    border-right:0!important;
  }
   
}



@media (min-width: 576px) and (max-width: 1200px){
.container {
    padding-left: 45px;
    padding-right: 45px;
    max-width: 100%;
  }

  table td.screenRow {  
    width: 150px;
    }
  table th.screenRow {
    width: 150px;
    }

  table td.wideRow, table th.wideRow{
    width: 235px;
    }
  .wideRow .width100 {
    width: 170px;
  }    
       
}



ul.side_nav {
  position: relative;  
  padding: 0;
  list-style: none;
  overflow: hidden;
  // -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
  // -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
  // box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
}

.side_nav li a {  
  padding: 18px 20px;
  display: block;
  overflow: hidden;
  position: relative;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 13.5px;
  color: #686868;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
.side_nav li a:hover {
  background: #42C670;
  color: #fff;
}


.basic-card p {
  font-size:15px
}
.basic .card-title {
  font-size: 20px;
}

.basic-card .card-content {
  padding: 30px;
}

.basic-card-aqua {
  background: #f7f7f7;
}

.basic-card-aqua .card-content, .basic-card .card-link a {
  color: #333;
}

.hor_line {
  margin: 10px 0 25px;
  border: 1px solid #e5e3e3
}

.stickysidebar {
  height: 88vh;
  min-height: 250px;
  overflow: auto;
  position: -webkit-sticky;
  position: sticky;
  top: 5%;
}

.btn-teal {
  color: #fff;
  background-color: #42C670;
  border-color: #42C670;
}


@media only screen and ( min-device-width: 768px) and ( max-device-width: 1098px) {
.deep-shadow {
    box-shadow: none;
  }

  // .fixed-layout {
  //   table-layout: unset
  // }

  //  .width100 {
  //    width: 50px;
  // }

   .width150 {
    width: 100px;

  }

  .font-25 {
    font-size: 22px;
  } 
  

}
@media only screen and ( min-device-width: 769px) and ( max-device-width: 980px) {
  .deep-shadow{
    box-shadow: none;
  } 

  //  .fixed-layout {
  //    table-layout:unset;
  // }

  //  .width100 {
  //    width: 50px;
  //  }

   .width150 {
     width: 100px;

   } 
   .border-right-sm2 {
    border-right: 0!important

   }

   .stickysidebar {
    position: unset;
    height: fit-content;
  }
}
   
   
   
         

